5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4137/executions/1575_1333.log
== TEST (2019-03-12 19:02:27) 
-- CODE:
expressao = 30 – 3 ** 2 + 8 // 3 ** 2 * 10
print(expressao)
-- ERROR:
File "XXXX", line 1
    expressao = 30 – 3 ** 2 + 8 // 3 ** 2 * 10
                   ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 19:44:38) 
-- CODE:
expressao = 30-3
print()
-- ERROR:
File "XXXX", line 1
    expressao = 30 – 3 ** 2 + 8 // 3 ** 2 * 10
                   ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 19:44:43) 
-- CODE:
expressao = 30 - 3
print()
-- ERROR:
File "XXXX", line 1
    expressao = 30 – 3 ** 2 + 8 // 3 ** 2 * 10
                   ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 19:44:53) 
-- CODE:
expressao = 30 - 3
print(30-3)
-- OUTPUT:
27
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 19:46:18) 
-- CODE:
expressao = (30-(3 ** 2))+(8//3 ** 2) * 10
print(30-(3 ** 2))+(8//3 ** 2) * 10)
-- ERROR:
File "XXXX", line 2
    print(30-(3 ** 2))+(8//3 ** 2) * 10)
                                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 19:46:29) 
-- CODE:
expressao = (30-(3 ** 2))+(8//3 ** 2) * 10
print(30-(3 ** 2))+(8//3 ** 2) * 10
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(30-(3 ** 2))+(8//3 ** 2) * 10
TypeError: unsupported operand type(s) for +: 'NoneType' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 19:46:38) 
-- CODE:
expressao = (30-(3 ** 2))+(8//3 ** 2) * 10
print(30 - (3 ** 2))+(8//3 ** 2) * 10
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(30 - (3 ** 2))+(8//3 ** 2) * 10
TypeError: unsupported operand type(s) for +: 'NoneType' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 19:46:44) 
-- CODE:
expressao = (30-(3 ** 2))+(8//3 ** 2) * 10
print(30 - (3 ** 2)) + (8//3 ** 2) * 10
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(30 - (3 ** 2)) + (8//3 ** 2) * 10
TypeError: unsupported operand type(s) for +: 'NoneType' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 19:46:56) 
-- CODE:
expressao = (30-(3 ** 2))+(8//3 ** 2) * 10
print(30 - (3 ** 2)) + ((8//3) ** 2) * 10
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(30 - (3 ** 2)) + ((8//3) ** 2) * 10
TypeError: unsupported operand type(s) for +: 'NoneType' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 20:06:13) 
-- CODE:
expressao = (30-(3 ** 2))+(8//3 ** 2) * 10
print((30 - (3 ** 2)) + ((8//3) ** 2) * 10)
-- OUTPUT:
61
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 20:06:16) 
-- CODE:
expressao = (30-(3 ** 2))+(8//3 ** 2) * 10
print((30 - (3 ** 2)) + ((8//3) ** 2) * 10)
-- EXECUTION TIME:
0.141164
-- TEST CASE 1:
---- input:
xx
---- correct output:
21
---- user output:
61
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 20:06:29) 
-- CODE:
expressao = (30-(3 ** 2))+(8//3 ** 2) * 10
print(30 - (3 ** 2)) + (8//3) ** 2) * 10)
-- ERROR:
File "XXXX", line 2
    print(30 - (3 ** 2)) + (8//3) ** 2) * 10)
                                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 20:06:55) 
-- CODE:
expressao = (30-(3 ** 2))+(8//3 ** 2) * 10
print((30 - (3 ** 2)) + ((8//3) ** 2) * 10)
-- OUTPUT:
61
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 20:06:58) 
-- CODE:
expressao = (30-(3 ** 2))+(8//3 ** 2) * 10
print((30 - (3 ** 2)) + ((8//3) ** 2) * 10)
-- EXECUTION TIME:
0.129499
-- TEST CASE 1:
---- input:
xx
---- correct output:
21
---- user output:
61
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 20:07:18) 
-- CODE:
expressao = (30-(3 ** 2))+(8//3 ** 2) * 10
print(30 - 2)
		
-- OUTPUT:
28
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 20:07:44) 
-- CODE:
expressao = (30-(3 ** 2))+(8//3 ** 2) * 10
print(30 - ((3) ** 2))
		
-- OUTPUT:
21
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 20:07:59) 
-- CODE:
expressao = (30-(3 ** 2))+(8//3 ** 2) * 10
print(30 - ((3) ** 2)) + 1
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(30 - ((3) ** 2)) + 1
TypeError: unsupported operand type(s) for +: 'NoneType' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 20:08:07) 
-- CODE:
expressao = (30-(3 ** 2))+(8//3 ** 2) * 10
print((30 - ((3) ** 2)) + 1)
		
-- OUTPUT:
22
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 20:09:01) 
-- CODE:
expressao = (30-(3 ** 2))+(8//3 ** 2) * 10
print((30 - ((3) ** 2)) + (8 // (3) ** 2)* 10 )
		
-- OUTPUT:
21
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 20:09:06) 
-- CODE:
expressao = (30-(3 ** 2))+(8//3 ** 2) * 10
print((30 - ((3) ** 2)) + (8 // (3) ** 2)* 10 )
		
-- EXECUTION TIME:
0.149954
-- TEST CASE 1:
---- input:
xx
---- correct output:
21
---- user output:
21
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
